successfully added database connection

--- a/itineshary/Base.lproj/Main.storyboard
+++ b/itineshary/Base.lproj/Main.storyboard
@@ -569,6 +569,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="RdP-ta-TVW"/>
+        <segue reference="dmD-fF-09w"/>
     </inferredMetricsTieBreakers>
 </document>
